0022583: Graphic3d_ArrayOfPolygons is not displayed if it has both the bounds and edges